--- a/DM873 - Deep Learning/main.tex
+++ b/DM873 - Deep Learning/main.tex
@@ -5,12 +5,7 @@
 \tableofcontents
 \newpage
 
-\include{Introduktion}
-
-\include{Chapter5}
-
-%% Ordbog
-\include{Ordbog}
+\include{Slide3}
 
 \newpage
 \printindex
